--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
 
     <section class="preview">
-
+     
 
 
     </section>
@@ -27,6 +27,7 @@
   </body>
   <script>
     // Add your code here
+    
     const myArray = ['bread', 'rice', 'eggsauce']
     myArray[0] = ['beans']
     myArray[1] = ['ham']
@@ -37,9 +38,16 @@
     const section = document.querySelector('section');
 
     let para1 = document.createElement('p');
+   
     para1.textContent = `Array: ${ myArray }`;
+   
 
     section.appendChild(para1);
+   
   </script>
+
+  <p><a href="array2.html"></a></p>
+  <p><a href="array3.html"></a></p>
+  <p><a href="array4.html"></a></p>
 
 </html>
