feat:add modifications

--- a/object/Task 1.html
+++ b/object/Task 1.html
@@ -36,7 +36,7 @@
     }
 
     // Add your code here
-    catName = 'Bertie'
+    cat['name'] = 'Bertie'
     cat.color = 'black'
 
     console.log(cat.greeting())
